...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerEventView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/recycler_view_events"
        >
    </androidx.recyclerview.widget.RecyclerView>

...
