<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".navigation.fragment.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/nav_header_desc" />

        <TextView
            android:id="@+id/account_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/col_on_secondary"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="23dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/usernameChange"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/change_username_account_display"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/change_username_fill"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_change_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_change_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/change_username_button"
                app:cornerRadius="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/exportFragment"
            android:name="com.github.onedirection.interoperability.gcalendar.ExportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.fragment.app.FragmentContainerView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/importFragment"
            android:name="com.github.onedirection.interoperability.gcalendar.ImportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.fragment.app.FragmentContainerView>

    </LinearLayout>

</FrameLayout>